# Ellipsis

./: .gitignore  LICENSE.md  README.md  Readme.md  package-lock.json
backend/: README.md  app.py  autopod.py  chunks_output.txt  prompt_template.txt  requirements.txt  summarizer.py  voice.py
backend/agent/: autopod.py  crawler.py  generator.py  mad.py  requirements.txt  voice.py
backend/integrations/podbean_mcp/: client.py  pyproject.toml  server.py
backend/integrations/podbean_mcp/podbean_mcp.egg-info/: PKG-INFO  SOURCES.txt
backend/routes/: api.py  podbean.py
backend/services/: sonar_service.py
backend/utils/: scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/MCP/: Readme.md  anchor_mcp_server.py  server.py
frontend/src/: App.css  App.js  App.tsx  env.d.ts  index.tsx  package-lock.json  package.json
frontend/src/Components/: ContentGenerationView.tsx
frontend/src/Screens/HomePage/: HomePage.tsx
frontend/src/Screens/MacbookAir/: MacbookAir.tsx
frontend/src/hooks/: usePodcastSSE.ts
frontend/src/services/: podbeanService.ts  socialService.ts  trendingService.ts
